message ContainerHostSave {
  optional bytes latestSaveData = 1;
  /**
   * Updates sent, received, or merged by the container that
   * are not accounted for in latestSaveData.
   */
  repeated bytes furtherUpdatesData = 2;
  /**
   * Types for furtherUpdates: true for savedState, false for message.
   */
  repeated bool furtherUpdatesTypes = 3;
}
